project spotlight—portrait, spacing fixes
added top and bottom margins for members, post, and description.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -60,7 +60,7 @@ p {
 p.header {
   font-weight: bold;
   font-size: 1.25em;
-
+  margin: 0;
 }
 
 @import 'partials/project_banner';
